templates/namespace.yml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.registry.namespace
  labels:
    cf-for-k8s.cloudfoundry.org/cf-registry-ns: ""
